# language-query

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TECH_STACK.md  TESTING_STRATEGY.md  lsp-reporting.md
.cargo/: config.toml
src/: lib.rs  main.rs  test_utils.rs
src/core/: mod.rs  service.rs
src/core/snapshots/: language_query__core__service__tests__symbol_docs.snap  language_query__core__service__tests__symbol_impl.snap  language_query__core__service__tests__symbol_references.snap  language_query__core__service__tests__symbol_resolve.snap  language_query__core__service__tests__test_docs_command.snap  language_query__core__service__tests__test_refs_command.snap  language_query__core__service__tests__test_resolve_command.snap
src/daemon/: mod.rs  server.rs
src/ipc/: mod.rs  protocol.rs
src/lsp/: connection.rs  mod.rs  rust_analyzer.rs
